--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
     "ftp": "^0.3.10",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
