--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^10.3.8",
     "@nestjs/swagger": "^7.1.14",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cors": "^2.8.5",
@@ -35,6 +36,7 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.19.2",
+    "express-fileupload": "^1.5.0",
     "fs": "^0.0.1-security",
     "ftp": "^0.3.10",
     "jsonwebtoken": "^9.0.2",
