--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.3.8",
+    "@nestjs/platform-socket.io": "^10.3.8",
     "@nestjs/swagger": "^7.1.14",
+    "@nestjs/websockets": "^10.3.8",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "class-transformer": "^0.5.1",
